# zip-install

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  context_menu.rs  install_state.rs  installer.rs  main.rs  models.rs  self_install_app.rs  utils.rs
src/app/: job.rs  mod.rs  routing.rs  state.rs
src/archive/: exe.rs  mod.rs  zip.rs
src/core/: bootstrap.rs  fingerprint.rs  installer.rs  mod.rs  models.rs
src/package/: candidate.rs  dir.rs  exe.rs  gzip.rs  mod.rs  open.rs  sevenz.rs  targz.rs  zip.rs
src/platform/: context_menu.rs  file_explorer.rs  mod.rs  shortcuts.rs
src/platform/context_menu/: linux.rs  mod.rs  windows.rs
src/state/: config.rs  index.rs  mod.rs  paths.rs  persistable.rs
src/ui/: app_list_view.rs  constants.rs  dialogs.rs  install_view.rs  manual_update_view.rs  messages.rs  mod.rs  self_install_app.rs  setup_view.rs  update_view.rs  viewport.rs  zip_install.rs
