[package]
name = "zip-install"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
anyhow = "1.0.101"
dirs = "6.0"
eframe = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
zip = "7.4.0"
uuid = { version = "1.20.0", features = ["v4"] }
regex = "1.12.3"
fs_extra = "1.3.0"
chrono = "0.4.43"

[dependencies.native-dialog]
version = "0.9.6"
features = [
    "windows_dpi_awareness",
    "windows_visual_styles"
]

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
winreg = "0.55.0"
