[package]
name = "zip-install"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0"
eframe = "0.33.0"
flate2 = "1"
fs_extra = "1.3.0"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
sevenz-rust = "0.6"
tar = "0.4"
toml = "1.1.2"
uuid = { version = "1.23.0", features = ["v4"] }
zip = "8.5.1"

[dependencies.native-dialog]
version = "0.9.6"
features = [
    "windows_dpi_awareness",
    "windows_visual_styles"
]

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
winreg = "0.56.0"

[target.'cfg(target_os = "linux")'.dependencies]
mime_guess = "2"

[patch.crates-io]
winit = { git = "https://github.com/danielpancake/winit.git", branch = "fix-dpi-win11" }

[build-dependencies]
winres = "0.1.12"
